src/App.css
/* ... */
.main > .main_content {
    display: flex;
    flex-direction: column;
    margin: 16px 20px;
}

.main > .main_content > .error {
    color: var(--font-color-error);
}

.main > .main_footer {
    position: sticky;
    bottom: 0;
    z-index: 1;
    width: 100%;
    margin-top: auto;
    background-color: var(--bg-color);
    /* Attempted fix to subpixel rendering that causes 1px content bleed at bottom */
    will-change: transform;
}

/* Playback area */
.main > .main_footer > .playback {
    position: relative;
}

/* Progress bar */
.main > .main_footer > .playback > .progress {
    position: relative;
    display: flex;
}

.main > .main_footer > .playback > .progress > input {
    position: relative;
    cursor: pointer;
    width: 100%;
    height: 8px;
    background-color: rgba(0, 0, 0, 0);
    margin-top: -4px;
    --progress-width: 0%;
    --buffered-width: 0%;
    --transition-duration: 0s;
}

/* Progress loading */
.main > .main_footer > .playback > .progress > input.loading::after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    user-select: none;
    pointer-events: none;
    opacity: 0;
    transform: scaleY(0.6);
    transition: transform 0.1s linear;
    background-image: linear-gradient(
        90deg,
        var(--bg-color-secondary) 0%,
        var(--bg-color-quaternary) 20%,
        var(--bg-color-secondary) 40%
    );
    background-size: 200%;
    animation: loading-shimmer 1.6s infinite linear;
    animation-delay: 0.4s;
}

@keyframes loading-shimmer {
    0% {
        opacity: 0.4;
        background-position: 100%;
    }
    60%,
    100% {
        opacity: 0.4;
        background-position: -100%;
    }
}

.main > .main_footer > .playback > .progress:hover > input.loading::after,
.main > .main_footer > .playback > .progress:active > input.loading::after {
    transform: scaleY(1);
}

/* WebKit progress visuals */
.main > .main_footer > .playback > .progress > input::-webkit-slider-runnable-track {
    position: relative;
    width: 100%;
    height: 8px;
    transform: scaleY(0.6);
    background: linear-gradient(var(--bg-color-quaternary), var(--bg-color-quaternary)) no-repeat 0 /
            var(--progress-width) 100%,
        linear-gradient(var(--bg-color-tertiary), var(--bg-color-tertiary)) no-repeat 0 / var(--buffered-width) 100%,
        var(--bg-color-secondary);
    transition: transform 0.1s linear, background-size var(--transition-duration) linear;
}

.main > .main_footer > .playback > .progress:hover > input::-webkit-slider-runnable-track,
.main > .main_footer > .playback > .progress:active > input::-webkit-slider-runnable-track {
    transform: scaleY(1);
}

/* Firefox progress visuals */
.main > .main_footer > .playback > .progress > input::-moz-range-track {
    width: 100%;
    height: 8px;
    transform: scaleY(0.6);
    background: linear-gradient(var(--bg-color-quaternary), var(--bg-color-quaternary)) no-repeat 0 /
            var(--progress-width) 100%,
        linear-gradient(var(--bg-color-tertiary), var(--bg-color-tertiary)) no-repeat 0 / var(--buffered-width) 100%,
        var(--bg-color-secondary);
    transition: transform 0.1s linear, background-size var(--transition-duration) linear;
}

.main > .main_footer > .playback > .progress:hover > input::-moz-range-track,
.main > .main_footer > .playback > .progress:active > input::-moz-range-track {
    transform: scaleY(1);
}

/* Hiding the input slider thumbs for different browsers */
.main > .main_footer > .playback > .progress > input::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 0;
    height: 0;
}

.main > .main_footer > .playback > .progress > input::-moz-range-thumb {
    width: 0;
    height: 0;
    border: none;
}

.main > .main_footer > .playback > .progress > input::-ms-thumb {
    width: 0;
    height: 0;
}

.main > .main_footer > .playback > .container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 14px 20px;
    /* Help with CJK letter spacing */
    max-height: 76px;
}

/* Lyrics Display */
.main > .main_footer > .lyrics.container * {
    --lyrics-expand-header-color: var(--bg-color-secondary);
    --lyrics-collapsed-height: 70px;
    --lyrics-expanded-height: 400px;
    --lyrics-border-margin: 35px;
    --lyrics-horizontal-margin: 20px;
    --lyrics-vertical-margin: 3px;
    --lyrics-header-height: fit-content;
}

/* Expand header on mobile screens to be easier to access with touch */
@media only screen and (max-width: 800px) {
    .main > .main_footer > .lyrics.container * {
        --lyrics-header-height: 25px;
    }
}

.main > .main_footer > .lyrics.container > .header {
    height: var(--lyrics-header-height);
    background-color: var(--lyrics-expand-header-color);

    transition: 100ms;

    display: flex;
    align-items: center;
    justify-content: center;

    cursor: pointer;

    border-top: 1px solid var(--border-color);
    border-bottom: 1px solid var(--border-color);
}

.main > .main_footer > .lyrics.container > .header:hover {
    filter: brightness(0.9);
}

.main > .main_footer > .lyrics.container > .header > .icon {
    transform: rotate(180deg);
    transition: 0.3s;
}

.main > .main_footer > .lyrics.container.expanded > .header > .icon {
    transform: rotate(0deg);
}

.main > .main_footer > .lyrics.container > .scroll-container {
    position: relative;

    display: block;
    transition: 0.5s;

    overflow: scroll;

    max-height: 40vh;
    height: var(--lyrics-collapsed-height);
}

.main > .main_footer > .lyrics.container.lyrics.container.expanded > .scroll-container {
    height: var(--lyrics-expanded-height);
}

.main > .main_footer > .lyrics.container > .scroll-container > .lyrics-display {
    width: 100%;

    min-height: var(--lyrics-collapsed-height);

    display: flex;
    flex-direction: column;

    align-items: stretch;
    justify-content: center;
}
/* ... */

